# codehawk

./: .gitignore  AGENTS.md  Dockerfile  PLAN.md  PROJECT-CLAUDE.md  README.md  docker-compose.yml  entrypoint.sh  feedback.md  progress.json  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt
ci/: azure-pipelines-pr-review.yml  github-review.yml
commands/: findings-schema.json  review-pr-core.md  review-pr.claude.md  scoring.md
docs/: README.md  architecture.md
docs/features/: agent-runner.md  ci-integration.md  fix-verification.md  graph-tools.md  post-findings.md  review-modes.md  scoring.md  vcs-cli.md
src/: batch_review_job.py  config.py  file_filter.py  graph_builder.py  post_findings.py  pr_scorer.py  review_job.py  run_agent.py  smart_diff.py  vcs.py
src/activities/: fetch_pr_comments_activity.py  post_fix_reply_activity.py  update_summary_activity.py
src/agents/: openai_runner.py
src/models/: review_models.py
src/tools/: __init__.py  graph_tools.py  registry.py  vcs_tools.py  workspace_tools.py
src/utils/: logger.py
templates/: .codereview.md  .codereview.yml
tests/: conftest.py  test_post_findings.py  test_pr_scorer.py
tests/fixtures/: sample_findings.json
tests/integration/: conftest.py  test_ado_activities.py  test_ado_pr_review.py  test_full_pipeline.py  test_graph.py
tests/unit/: test_graph_builder.py  test_graph_tools.py  test_phase2_scoring.py  test_post_findings.py  test_review_job.py  test_turn_budget.py
