[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codehawk"
version = "0.1.0"
description = "AI-powered PR code reviewer supporting Azure DevOps and GitHub"
requires-python = ">=3.11"
dependencies = [
    "azure-devops>=7.1.0b1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "msrest",
    "code-review-graph>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["src"]
markers = [
    "integration: live ADO integration tests (require ADO_PAT env var)",
]
